--- a/Farmacia/src/app/app.component.html
+++ b/Farmacia/src/app/app.component.html
@@ -1,7 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    ava to {{ Avadaocu }}!
-  </h1>
-
-</div>
+<button pButton type="button" label="Click" ></button>
+<p-button label="Click" ></p-button>
