--- a/Farmacia/src/app/app.component.html
+++ b/Farmacia/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <button pButton type="button" label="Click" ></button>
 <p-button label="Click" ></p-button>
+<p-button label="Click" ></p-button>
+<p-button label="Click" ></p-button>
