--- a/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
+++ b/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
@@ -1,3 +1,15 @@
-<p>
-  clientes-cadastro works!
-</p>
+
+<h3>Nome do cliente</h3>
+<span class="ui-float-label">
+  <input id="float-input" type="text" size="30" pInputText>
+  <label for="float-input">Nome</label>
+</span>
+
+<h3>Tipo do Cliente</h3>
+
+<p-dropdown [options]="groupedCars" [(ngModel)]="selectedCar" placeholder="Tipo" [group]="true"></p-dropdown>
+
+<div class="content-section implementation">
+  <h3 class="first">Single</h3>
+  <p-dropdown [options]="tipos" [(ngModel)]="tipoSelecionado" placeholder="Selecione um tipo" optionLabel="name" [showClear]="true"></p-dropdown>
+  <p>Tipo Selecionado: {{tipoSelecionado ? tipoSelecionado.name : 'Nenhum'}}</p>
