--- a/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
+++ b/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
@@ -1,15 +1,40 @@
 
 <h3>Nome do cliente</h3>
 <span class="ui-float-label">
-  <input id="float-input" type="text" size="30" pInputText>
-  <label for="float-input">Nome</label>
+    <input id="float-input" type="text" size="30" pInputText>
+    <label for="float-input">Username</label>
 </span>
 
 <h3>Tipo do Cliente</h3>
+<p-dropdown [(ngModel)]="cars" placeholder="Selecione o tipo" [group]="true"></p-dropdown>
 
-<p-dropdown [options]="groupedCars" [(ngModel)]="selectedCar" placeholder="Tipo" [group]="true"></p-dropdown>
+<div class="content-section introduction">
+  <div>
+      <span class="feature-title">Dropdown</span>
+      <span>Dropdown is used to select an item from a collection of options. Custom content support and filtering are the notable features.</span>
+  </div>
+</div>
 
 <div class="content-section implementation">
   <h3 class="first">Single</h3>
-  <p-dropdown [options]="tipos" [(ngModel)]="tipoSelecionado" placeholder="Selecione um tipo" optionLabel="name" [showClear]="true"></p-dropdown>
-  <p>Tipo Selecionado: {{tipoSelecionado ? tipoSelecionado.name : 'Nenhum'}}</p>
+  <p-dropdown [options]="cities" [(ngModel)]="selectedCity" placeholder="Select a City" optionLabel="name" [showClear]="true"></p-dropdown>
+  <p>Selected City: {{selectedCity ? selectedCity.name : 'none'}}</p>
+
+  <h3>Editable</h3>
+  <p-dropdown [options]="cars" [(ngModel)]="selectedCar1" editable="true" placeholder="Select a Brand"></p-dropdown>
+  <p>Selected Car: {{selectedCar1 || 'none'}}</p>
+
+  <h3>Content with Filters</h3>
+  <p-dropdown [options]="cars" [(ngModel)]="selectedCar2" filter="true">
+      <ng-template let-item pTemplate="selectedItem">
+          <img src="assets/showcase/images/demo/car/{{item.label}}.png" style="width:16px;vertical-align:middle" />
+          <span style="vertical-align:middle; margin-left: .5em">{{item.label}}</span>
+      </ng-template>
+      <ng-template let-car pTemplate="item">
+          <div class="ui-helper-clearfix" style="position: relative;height: 25px;">
+              <img src="assets/showcase/images/demo/car/{{car.label}}.png" style="width:24px;position:absolute;top:1px;left:5px"/>
+              <div style="font-size:14px;float:right;margin-top:4px">{{car.label}}</div>
+          </div>
+      </ng-template>
+  </p-dropdown>
+  <p>Selected Car: {{selectedCar2 || 'none'}}</p>
