--- a/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
+++ b/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
@@ -1,40 +1,15 @@
 
 <h3>Nome do cliente</h3>
 <span class="ui-float-label">
-    <input id="float-input" type="text" size="30" pInputText>
-    <label for="float-input">Username</label>
+    <input id="float-input" type="text" size="40" pInputText type="text" name="nome" [(ngModel)]="cliente.nome" #nome="ngModel" required minlength="3">
+        <div *ngIf="nome.hasError('minlength')">O nome deve ter no mínimo 3 caractares</div>
+    <label for="float-input">Insira o nome</label>
 </span>
 
-<h3>Tipo do Cliente</h3>
-<p-dropdown [(ngModel)]="cars" placeholder="Selecione o tipo" [group]="true"></p-dropdown>
-
-<div class="content-section introduction">
-  <div>
-      <span class="feature-title">Dropdown</span>
-      <span>Dropdown is used to select an item from a collection of options. Custom content support and filtering are the notable features.</span>
-  </div>
+<div class="content-section implementation">
+  <h3 class="first">Tipo do Cliente</h3>
+  <p-dropdown [options]="tipos" [(ngModel)]="cliente.tipo" placeholder="Selecione o tipo" optionLabel="name" [showClear]="true"></p-dropdown>
 </div>
 
-<div class="content-section implementation">
-  <h3 class="first">Single</h3>
-  <p-dropdown [options]="cities" [(ngModel)]="selectedCity" placeholder="Select a City" optionLabel="name" [showClear]="true"></p-dropdown>
-  <p>Selected City: {{selectedCity ? selectedCity.name : 'none'}}</p>
-
-  <h3>Editable</h3>
-  <p-dropdown [options]="cars" [(ngModel)]="selectedCar1" editable="true" placeholder="Select a Brand"></p-dropdown>
-  <p>Selected Car: {{selectedCar1 || 'none'}}</p>
-
-  <h3>Content with Filters</h3>
-  <p-dropdown [options]="cars" [(ngModel)]="selectedCar2" filter="true">
-      <ng-template let-item pTemplate="selectedItem">
-          <img src="assets/showcase/images/demo/car/{{item.label}}.png" style="width:16px;vertical-align:middle" />
-          <span style="vertical-align:middle; margin-left: .5em">{{item.label}}</span>
-      </ng-template>
-      <ng-template let-car pTemplate="item">
-          <div class="ui-helper-clearfix" style="position: relative;height: 25px;">
-              <img src="assets/showcase/images/demo/car/{{car.label}}.png" style="width:24px;position:absolute;top:1px;left:5px"/>
-              <div style="font-size:14px;float:right;margin-top:4px">{{car.label}}</div>
-          </div>
-      </ng-template>
-  </p-dropdown>
-  <p>Selected Car: {{selectedCar2 || 'none'}}</p>
+<h3></h3>
+<button pButton type="submit" label="Adicionar" class="ui-button-rounded ui-button-success"></button>
