--- a/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
+++ b/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
@@ -8,7 +8,7 @@
 
 <div class="content-section implementation">
   <h3 class="first">Tipo do Cliente</h3>
-  <p-dropdown [options]="tipos" [(ngModel)]="cliente.tipo" placeholder="Selecione o tipo" optionLabel="name" [showClear]="true"></p-dropdown>
+  <p-dropdown [options]="tipo" [(ngModel)]="cliente.tipo" placeholder="Selecione o tipo" optionLabel="name" [showClear]="true"></p-dropdown>
 </div>
 
 <h3></h3>
