--- a/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
+++ b/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
@@ -1,18 +1,16 @@
 <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
-
-
   <h3>Nome do cliente</h3>
   <span class="ui-float-label">
     <input id="float-input" type="text" size="40" pInputText type="text" name="nome" [(ngModel)]="cliente.nome" #nome="ngModel" required minlength="3">
         <div *ngIf="nome.hasError('minlength')">O nome deve ter no mínimo 3 caractares</div>
     <label for="float-input">Insira o nome</label>
   </span>
-
-    <h3 class="first">Tipo do Cliente</h3>
-    <p-dropdown [options]="tipos" [(ngModel)]="cliente.tipo" [style]="{'width':'150px'}"
-      placeholder="Selecione o tipo" optionLabel="label" [showClear]="true">
-    </p-dropdown>
-
+  <h3>Possuí receita ?</h3>
+  <span class="ui-float-label">
+      <input id="float-input" type="text" size="40" pInputText type="text" name="tipo" [(ngModel)]="cliente.tipo" #tipo="ngModel" required maxlength="1">
+          <div *ngIf="nome.hasError('maxlength')">Insira o valor correspondente</div>
+      <label for="float-input">Não = 1 Sim = 2</label>
+    </span>
   <h3></h3>
   <div>
     <button pButton type="submit" label="Adicionar" [disabled]="f.invalid" class="ui-button-rounded ui-button-success"></button>
