--- a/Farmacia/src/app/app.component.html
+++ b/Farmacia/src/app/app.component.html
@@ -2,15 +2,15 @@
   <div class="ui-g">
     <div class="ui-g-12 ui-fluid">
     <h1 class="boxButton">Farmácia</h1>
-    <button type="button" (click)="sideBar = false" pButton icon="pi pi-plus" label="Cadastrar Cliente" routerLink="/clientes"class="ui-button-success"></button>
+    <button type="button" (click)="sideBar = false" pButton icon="pi pi-plus" label="Cadastrar Cliente" routerLink="/clientes" class="ui-button-success"></button>
       <h1> </h1>
-    <button type="button" (click)="sideBar = false" pButton icon="pi pi-plus" label="Cadastrar Produto" routerLink="/produtos"class="ui-button-success"></button>
+    <button type="button" (click)="sideBar = false" pButton icon="pi pi-plus" label="Cadastrar Produto" routerLink="/produtos" class="ui-button-success"></button>
     <h1> </h1>
-    <button type="button" (click)="sideBar = false" pButton icon="pi pi-plus" label=" Realizar Venda" class="boxButton"></button>
+    <button type="button" (click)="sideBar = false" pButton icon="pi pi-plus" label=" Realizar Venda"  routerLink="/vendas" class="boxButton"></button>
     <h1> </h1>
-    <button type="button" (click)="sideBar = false" pButton label="Listar clientes" class="ui-button-secondary"></button>
+    <button type="button" (click)="sideBar = false" pButton label="Listar clientes" routerLink="/clientes/listagem" class="ui-button-secondary"></button>
     <h1> </h1>
-    <button type="button" (click)="sideBar = false" pButton label="Listar Produtos" class="ui-button-secondary"></button>
+    <button type="button" (click)="sideBar = false" pButton label="Listar Produtos" routerLink="/produtos/listagem" class="ui-button-secondary"></button>
   </div>
   </div>
 </p-sidebar>
