--- a/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
+++ b/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
@@ -1,29 +1,33 @@
 <p-toast></p-toast>
 <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
-    <div class="ui-g">
-     <div class="ui-g-12">
-         <h1>Novo Cliente</h1>
-        </div>
-     <div class="ui-g-12">
-          <h3>Nome do cliente</h3>
-         <span class="ui-float-label">
-           <input id="float-input" type="text" size="40" pInputText type="text" name="nome" [(ngModel)]="cliente.nome" #nome="ngModel" required minlength="3">
-           <div *ngIf="nome.hasError('minlength')">O nome deve ter no mínimo 3 caractares</div>
-            <label for="float-input">Insira o nome</label>
-         </span>
-     </div>
-     <div class="ui-g-12">
-     <h3>Possuí receita ?</h3>
-      <span class="ui-float-label">
-        <input id="float-input" type="text" size="40" pInputText type="text" name="tipo" [(ngModel)]="cliente.tipo" #tipo="ngModel" required maxlength="1">
-        <div *ngIf="nome.hasError('maxlength')">Insira o valor correspondente</div>
-       <label for="float-input">Não = 1 Sim = 2</label>
-     </span>
-      </div>
-      <h3></h3>
-     <div class="ui-g-12">
-       <button pButton type="submit" label="Adicionar" [disabled]="f.invalid" class="ui-button-rounded ui-button-success"></button>
-       <button pButton type="button" label="Voltar" class="ui-button-rounded ui-button-secondary" routerLink ="/"></button>
-      </div>
+  <div class="ui-g">
+    <div class="ui-g-12">
+      <h1>Novo Cliente</h1>
     </div>
-  </form>
+    <div class="ui-g-12">
+      <h3>Nome do cliente</h3>
+      <span class="ui-float-label">
+        <input id="float-input" type="text" size="40" pInputText type="text" name="nome" [(ngModel)]="cliente.nome"
+          #nome="ngModel" required minlength="3">
+        <div *ngIf="nome.hasError('minlength')">O nome deve ter no mínimo 3 caractares</div>
+        <label for="float-input">Insira o nome</label>
+      </span>
+    </div>
+    <div class="ui-g-12">
+      <h3>Possuí receita ?</h3>
+      <span class="ui-float-label">
+        <input id="float-input" type="text" size="40" pInputText type="text" name="tipo" [(ngModel)]="cliente.tipo"
+          #tipo="ngModel" required maxlength="1">
+        <div *ngIf="nome.hasError('maxlength')">Insira o valor correspondente</div>
+        <label for="float-input">Não = 1 Sim = 2</label>
+      </span>
+    </div>
+    <h3></h3>
+    <div class="ui-g-12">
+      <button pButton type="submit" label="Adicionar" [disabled]="f.invalid"
+        class="ui-button-rounded ui-button-success"></button>
+      <button pButton type="button" label="Voltar" class="ui-button-rounded ui-button-secondary"
+        routerLink="/"></button>
+    </div>
+  </div>
+</form>
