--- a/Farmacia/src/app/produtos/produtos-listagem/produtos-listagem.component.html
+++ b/Farmacia/src/app/produtos/produtos-listagem/produtos-listagem.component.html
@@ -1,1 +1,28 @@
-olá
+<p-toast></p-toast>
+<p-confirmDialog header="Confirmação" icon="pi pi-question-circle" acceptLabel="Sim" rejectLabel="Não">
+</p-confirmDialog>
+<div class="ui-g">
+  <div class="ui-g-12">
+    <p-table [value]="produtos" [paginator]="true" [rows]="10" [responsive]="true">
+      <ng-template pTemplate="header">
+        <tr>
+          <th class="col-id-header">Id</th>
+          <th>Produtos</th>
+          <th class="col-acoes"></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-produto>
+        <tr>
+          <td class="col-id">{{protudo.id}}</td>
+          <td>{{produto.nome}}</td>
+          <td class="col-acoes">
+            <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" showDelay="125"
+              class="ui-button-info" [routerLink]="['/produtos',produto.id]"></button>
+            <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top" showDelay="125"
+              (click)="confirmarExclusao(produto)" class="ui-button-danger"></button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
