--- a/Farmacia/src/app/produtos/produtos-listagem/produtos-listagem.component.html
+++ b/Farmacia/src/app/produtos/produtos-listagem/produtos-listagem.component.html
@@ -13,7 +13,7 @@
       </ng-template>
       <ng-template pTemplate="body" let-produto>
         <tr>
-          <td class="col-id">{{protudo.id}}</td>
+          <td class="col-id">{{produto.id}}</td>
           <td>{{produto.nome}}</td>
           <td class="col-acoes">
             <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" showDelay="125"
