--- a/Farmacia/src/app/clientes/clientes-listagem/clientes-listagem.component.html
+++ b/Farmacia/src/app/clientes/clientes-listagem/clientes-listagem.component.html
@@ -1,3 +1,48 @@
-<p>
-  clientes-listagem works!
-</p>
+<p-toast></p-toast>
+<p-confirmDialog header="Confirmação" icon="pi pi-question-circle" acceptLabel="Sim" rejectLabel="Não">
+</p-confirmDialog>
+<div>
+  <form autocomplete="off" (ngSubmit)="pesquisar()">
+    <div class="ui-g">
+      <div class="ui-g-12">
+        <h1>
+          Clientes
+        </h1>
+      </div>
+      <div class="ui-g-12">
+        <span class="ui-float-label">
+          <input pInputText type="text" name="pesquisa" size="40" [(ngModel)]="filtro" #pesquisa="ngModel">
+          <label for="float-input">Cliente</label>
+        </span>
+      </div>
+      <div class="ui-g-12">
+        <button pButton type="submit" label="Buscar"></button>
+      </div>
+    </div>
+  </form>
+</div>
+<div class="ui-g">
+  <div class="ui-g-12">
+    <p-table [value]="clientes" [paginator]="true" [rows]="10" [responsive]="true">
+      <ng-template pTemplate="header">
+        <tr>
+          <th class="col-id-header">Id</th>
+          <th>Clientes</th>
+          <th class="col-acoes"></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-cliente>
+        <tr>
+          <td class="col-id">{{cliente.id}}</td>
+          <td>{{cliente.nome}}</td>
+          <td class="col-acoes">
+            <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" showDelay="125"
+              class="ui-button-info" [routerLink]="['/clientes',cliente.id]"></button>
+            <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top" showDelay="125"
+              (click)="confirmarExclusao(cliente)" class="ui-button-danger"></button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
