--- a/Farmacia/src/app/produtos/produtos-listagem/produtos-listagem.component.html
+++ b/Farmacia/src/app/produtos/produtos-listagem/produtos-listagem.component.html
@@ -1,9 +1,29 @@
 <p-toast></p-toast>
 <p-confirmDialog header="Confirmação" icon="pi pi-question-circle" acceptLabel="Sim" rejectLabel="Não">
 </p-confirmDialog>
+<div>
+  <form autocomplete="off" (ngSubmit)="pesquisar()">
+    <div class="ui-g">
+      <div class="ui-g-12">
+        <h1>
+          Produtos
+        </h1>
+      </div>
+      <div class="ui-g-12">
+          <span class="ui-float-label">
+        <input pInputText type="text" name="pesquisa" size="40" [(ngModel)]="filtro" #pesquisa="ngModel">
+        <label for="float-input">Produto</label>
+      </span>
+      </div>
+      <div class="ui-g-12">
+        <button pButton type="submit" label="Buscar"></button>
+      </div>
+    </div>
+  </form>
+</div>
 <div class="ui-g">
   <div class="ui-g-12">
-    <p-table [value]="produtos" [paginator]="true" [rows]="10" [responsive]="true">
+    <p-table  [value]="produtos" [paginator]="true" [rows]="10" [responsive]="true">
       <ng-template pTemplate="header">
         <tr>
           <th class="col-id-header">Id</th>
