--- a/Farmacia/src/app/produtos/produtos-listagem/produtos-listagem.component.html
+++ b/Farmacia/src/app/produtos/produtos-listagem/produtos-listagem.component.html
@@ -10,10 +10,10 @@
         </h1>
       </div>
       <div class="ui-g-12">
-          <span class="ui-float-label">
-        <input pInputText type="text" name="pesquisa" size="40" [(ngModel)]="filtro" #pesquisa="ngModel">
-        <label for="float-input">Produto</label>
-      </span>
+        <span class="ui-float-label">
+          <input pInputText type="text" name="pesquisa" size="40" [(ngModel)]="filtro" #pesquisa="ngModel">
+          <label for="float-input">Produto</label>
+        </span>
       </div>
       <div class="ui-g-12">
         <button pButton type="submit" label="Buscar"></button>
@@ -23,18 +23,22 @@
 </div>
 <div class="ui-g">
   <div class="ui-g-12">
-    <p-table  [value]="produtos" [paginator]="true" [rows]="10" [responsive]="true">
+    <p-table [value]="produtos" [paginator]="true" [rows]="10" [responsive]="true">
       <ng-template pTemplate="header">
         <tr>
           <th class="col-id-header">Id</th>
           <th>Produtos</th>
-          <th class="col-acoes"></th>
+          <th class="col-acoes">Estoque</th>
+          <th class="col-acoes">Valor</th>
+          <th class="col-acoes">Menu</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-produto>
         <tr>
           <td class="col-id">{{produto.id}}</td>
           <td>{{produto.nome}}</td>
+          <td class="col-id">{{produto.estoque}}</td>
+          <td class="col-id">R${{produto.valor}}</td>
           <td class="col-acoes">
             <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" showDelay="125"
               class="ui-button-info" [routerLink]="['/produtos',produto.id]"></button>
