--- a/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
+++ b/Farmacia/src/app/clientes/clientes-cadastro/clientes-cadastro.component.html
@@ -2,7 +2,7 @@
 <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
   <div class="ui-g">
     <div class="ui-g-12">
-      <h1>Novo Cliente</h1>
+      <h1>{{editando?'Edicão de ': 'Novo '}} Cliente</h1>
     </div>
     <div class="ui-g-12">
       <h3>Nome do cliente</h3>
@@ -27,7 +27,7 @@
       <button pButton type="submit" label="Adicionar" [disabled]="f.invalid"
         class="ui-button-rounded ui-button-success"></button>
       <button pButton type="button" label="Voltar" class="ui-button-rounded ui-button-secondary"
-        routerLink="/"></button>
+        routerLink="/clientes/listagem"></button>
     </div>
   </div>
 </form>
