--- a/front-web/src/app/cidades/cidades-cadastro/cidades-cadastro.component.html
+++ b/front-web/src/app/cidades/cidades-cadastro/cidades-cadastro.component.html
@@ -19,7 +19,7 @@
                 <label>estado</label>
               <p-dropdown [options]="estados"
                 [(ngModel)]="cidade.estado.id"
-                name="estado" [filter]="true">
+                name="estado" [filter]="true" placeholder="Selecione o estado">
               </p-dropdown>
 
             </div>
