--- a/Farmacia/src/app/vendas/vendas-cadastro/vendas-cadastro.component.html
+++ b/Farmacia/src/app/vendas/vendas-cadastro/vendas-cadastro.component.html
@@ -5,29 +5,22 @@
   <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
     <div class="ui-g">
       <div class="ui-g-12">
-        <h1>Novo Produto</h1>
+        <h1>Nova venda</h1>
       </div>
       <div class="ui-g-12 ui-md-9 ui-fluid">
-        <label>Nome</label>
-        <input pInputText type="text" name="nome" [(ngModel)]="produto.nome" #nome="ngModel" required minlength="3">
-        <div *ngIf="nome.hasError('required') && nome.touched">Informe um nome</div>
-        <div *ngIf="nome.hasError('minlength')">O nome deve ter no mínimo 3 caractares</div>
+        <!--fazer drop down para cliente-->
       </div>
       <div class="ui-g-12 ui-md-9 ui-fluid">
-        <label>Preço</label>
-        <input pInputText type="text" name="preco" [(ngModel)]="produto.preco" #nome="ngModel" required
-        currencyMask
-        [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' , align:'left'}">
-        <div *ngIf="nome.hasError('required') && nome.touched">Informe um preço</div>
+        <!--escolher os produtos-->
       </div>
       <div class="ui-g-12 ui-md-9 ui-fluid">
-        <p-pickList [source]="categorias" [target]="produto.categorias"
-        sourceHeader="Categorias" targetHeader="Selecionadas"
+        <p-pickList [source]="produtos" [target]="venda.produtos"
+        sourceHeader="Produtos" targetHeader="Selecionados"
         [responsive]="true"  [dragdrop]="true"
         [showSourceControls]="false" [showTargetControls]="false">
-          <ng-template let-cat pTemplate="item">
+          <ng-template let-produto pTemplate="item">
               <div class="ui-helper-clearfix">
-                  <div style="font-size:12px;float:right;margin:5px 5px 0 0">{{cat.nome}}</div>
+                  <div style="font-size:12px;float:right;margin:5px 5px 0 0">{{produto.nome}}</div>
               </div>
           </ng-template>
       </p-pickList>
