--- a/Farmacia/src/app/vendas/vendas-cadastro/vendas-cadastro.component.html
+++ b/Farmacia/src/app/vendas/vendas-cadastro/vendas-cadastro.component.html
@@ -2,58 +2,37 @@
 
 <div class="container">
   <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
-    <div class="ui-g">
+    <div class="ui-g-12">
+        <input pInputText type="number" name="cliente" [(ngModel)]="venda.cliente" #cliente="ngModel">
+      <h1>Nova venda</h1>
       <div class="ui-g-12">
-        <h1>Nova venda</h1>
         <h4>Insira o cliente</h4>
-        <span class="ui-float-label">
-          <input id="float-input" type="text" pInputText type="number" [min]="0" [max]="100" name="nome"
-            [(ngModel)]="venda.cliente" #nome="ngModel">
-          <label for="float-input">ID</label>
-        </span>
+        <input pInputText type="number" name="cliente" [(ngModel)]="venda.cliente" #cliente="ngModel">
       </div>
-      <h4>Insira os produtos</h4>
-      <div class="ui-g-12">
-          <div class="ui-g-6">
-        <span class="ui-float-label">
-          <input id="float-input" type="text" pInputText type="number" [min]="0" [max]="100" name="nome1"
-            [(ngModel)]="venda.produtos" #nome="ngModel">
-          <label for="float-input">ID</label>
-        </span>
-      </div>
-        <div class="ui-g-6">
-        <span class="ui-float-label">
-            <input id="float-input" type="text" pInputText type="number" [min]="0" [max]="100" name="quantidade"
-              [(ngModel)]="venda.quantidade" #nome="ngModel">
-            <label for="float-input">ID</label>
-          </span>
-        </div>
-      </div>
-
-      <!--
-      <p-dropdown  name="produto" [options]="produtos" [(ngModel)]="venda.produtos" ></p-dropdown>
--->
-      <!--
-      <div class="ui-g-12 ui-md-9 ui-fluid">
-        <p-pickList [source]="produtos" [target]="venda.produtos" sourceHeader="Produtos" targetHeader="Selecionados"
-          [responsive]="true" [dragdrop]="true" [showSourceControls]="false" [showTargetControls]="false">
-          <ng-template let-produto pTemplate="item">
-            <div class="ui-helper-clearfix">
-              <div style="font-size:12px;float:right;margin:5px 5px 0 0">{{produto.nome}}</div>
-            </div>
-          </ng-template>
-        </p-pickList>
-      </div>
--->
-      <div class="ui-g-12">
-        <button pButton type="submit" label="Salvar" [disabled]="f.invalid" class=" boxButton"></button>
-      </div>
-
-      <div class="ui-g-12">
-          <button pButton type="submit" label="Finalizar venda" [disabled]="f.invalid" class=" boxButton"></button>
-        </div>
-
+      <p-table [value]="produtos" [paginator]="true" [rows]="5" [responsive]="true">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Produtos</th>
+            <th class="col-acoes">Valor</th>
+            <th class="col-acoes">Quantidade</th>
+            <th class="col-qnt">Menu</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-produto>
+          <tr>
+            <td>{{produto.nome}}</td>
+            <td>R${{produto.valor}}</td>
+            <td>{{produto.quantidade}}
+              <input pInputText type="number" min="0" max="10" name="quantidade" [(ngModel)]="venda.quantidade"
+                #quantidade="ngModel">
+            </td>
+            <td class="col-qnt">
+              <button pButton type="submit" pTooltip="Comprar" tooltipPosition="top" showDelay="125"
+                icon="ui-button-success" label="Comprar" class=" ui-button-rounded ui-button-success"></button>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
     </div>
   </form>
-
 </div>
